# Rust-Tutorial-Basics-621

./: .gitignore  Cargo.toml  lib.rs  project-setup-Rust-Tutorial-Basics-621.ps1
Advanced_Language_Features/generics/src/: lib.rs
Advanced_Language_Features/lifetimes/src/: lib.rs
Advanced_Language_Features/none_main_entry_point/: Cargo.toml
Advanced_Language_Features/none_main_entry_point/src/: lib.rs  main.rs
Advanced_Language_Features/traits/src/: lib.rs
Concurrency_Advanced_Abstractions/futures_async_await/: Cargo.toml
Concurrency_Advanced_Abstractions/futures_async_await/src/: lib.rs
Concurrency_Advanced_Abstractions/macros/src/: lib.rs
Concurrency_Advanced_Abstractions/multithreading/src/: lib.rs
Control_Flow_Data_Interaction/package_management/: Cargo.toml
Control_Flow_Data_Interaction/package_management/src/: lib.rs
Control_Flow_Data_Interaction/pattern_matching/src/: lib.rs
Core_Memory_Safety_Performance_Concepts/borrowing/src/: lib.rs
Core_Memory_Safety_Performance_Concepts/memory_management/src/: lib.rs  main.rs
Core_Memory_Safety_Performance_Concepts/mutability/src/: lib.rs
Core_Memory_Safety_Performance_Concepts/ownership/src/: lib.rs
Core_Memory_Safety_Performance_Concepts/references/src/: lib.rs
Core_Memory_Safety_Performance_Concepts/stack_vs_heap/: Cargo.toml
Core_Memory_Safety_Performance_Concepts/stack_vs_heap/src/: lib.rs
Data_Structures_Organization/enums/src/: lib.rs
Data_Structures_Organization/optional_result/: Cargo.toml
Data_Structures_Organization/optional_result/src/: lib.rs
Data_Structures_Organization/structs/src/: lib.rs
Experiments/array/src/: main.rs
Experiments/borrow-value/: Cargo.toml
Experiments/borrow-value/src/: lib.rs  main.rs
Experiments/consts-experiments/: Cargo.toml
Experiments/enums-experiments/: Cargo.toml
Experiments/enums-experiments/src/: main.rs
Experiments/generics-experiments/: Cargo.toml
Experiments/generics-experiments/src/: main.rs
Experiments/lifetimes-experiments/: Cargo.toml
Experiments/lifetimes-experiments/src/: main.rs
Experiments/mutability-experiments/: Cargo.toml
Experiments/mutability-experiments/src/: main.rs
Experiments/structs-experiments/: Cargo.toml
Experiments/structs-experiments/src/: main.rs
Experiments/traits-experiments/: Cargo.toml
Experiments/traits-experiments/src/: main.rs
Experiments/variable/src/: main.rs
Getting_Started_Basics/initializing_a_project_locally/: Cargo.toml
Getting_Started_Basics/variables_number_strings_and_bools/: Cargo.toml
Getting_Started_Basics/variables_number_strings_and_bools_/: Cargo.toml
Pattern_Matching/: Cargo.toml
Pattern_Matching/src/: main.rs
const-static/: Cargo.toml
const-static/src/: main.rs
threads/arc-example/: Cargo.toml
threads/shard-state-conurrency/: Cargo.toml
threads/src/: main.rs  spinlock.rs
(+11 files in other folders)
